--- a/src/component/form/form.scss
+++ b/src/component/form/form.scss
@@ -1,194 +1,193 @@
-.form-page{
-    width: 100%;
-    background-color: #F8F8F8;
-    padding-bottom: 100px;
-    &__container{
-        max-width: 1170px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    &__title{
-        font-family: 'Nunito';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 40px; 
-        margin-bottom: 50px;
-        text-align: center;
-    }
-    .form-submit{
-        display: flex;
-        flex-direction: column;
-        &__input{
-            display: block;
-            padding: 19px 16px;
-            border: 1px solid #D0CFCF;
-            width: 380px;
-            @media(max-width:400px){
-                &{
-                    width: 328px;
-                }
-            }
-
-            &::placeholder{
-                font-family: 'Nunito';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 26px;
-            }
-        
-        }
-    }
-}
-
-.input__text{
-    display: block;
-    margin-bottom: 43px;
+.form-page {
+  width: 100%;
+  background-color: #f8f8f8;
+  padding-bottom: 100px;
+  &__container {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  &__title {
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    color: #7E7E7E;
-    position: relative;
-    left: 10px;
-    top:2px
-}
+    font-size: 40px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  .form-submit {
+    display: flex;
+    flex-direction: column;
+    &__input {
+      display: block;
+      padding: 19px 16px;
+      border: 1px solid #d0cfcf;
+      width: 380px;
+      @media (max-width: 400px) {
+        & {
+          width: 328px;
+        }
+      }
 
-.error__text{
-    color: red;
-}
-
-
-
-.position-radio{
-    padding-bottom: 47px;
-    &__label{
+      &::placeholder {
         font-family: 'Nunito';
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        color:#000000DE;
-        margin-bottom: 11px;
+        line-height: 26px;
+      }
     }
+  }
 }
 
-////////////
-.position__item{
-    &__input{
-        display: none;
-        &:checked + .form__label::after{
-            transform: scale(1);
-        }
-    }
-    margin-bottom: 9px;
-    
+.input__text {
+  display: block;
+  margin-bottom: 43px;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  color: #7e7e7e;
+  position: relative;
+  left: 10px;
+  top: 2px;
 }
-.form__label{
-    
-    display: flex;
-    align-items: center;
-    position: relative;
+
+.error__text {
+  color: red;
+}
+
+.position-radio {
+  padding-bottom: 47px;
+  &__label {
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    &::before{
-        content: '';
-        height: 20px;
-        flex: 0 0 20px;
-        background-color: #fff;
-        border: 1px solid #00BDD3;
-        border-radius: 50%;
-        margin-right: 12px;
-        
-    }
-
-    &::after{
-        transition: all 0.3s ease 0s;
-        content: '';
-        position:absolute;
-        width: 10px;
-        height: 10px;
-        background-color: #00BDD3;
-        border-radius: 50%;
-        left: 5px;
-        transform: scale(0);
-    }
+    color: #000000de;
+    margin-bottom: 11px;
+  }
 }
 
+////////////
+.position__item {
+  &__input {
+    display: none;
+    &:checked + .form__label::after {
+      transform: scale(1);
+    }
+  }
+  margin-bottom: 9px;
+}
+.form__label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  &::before {
+    content: '';
+    height: 20px;
+    flex: 0 0 20px;
+    background-color: #fff;
+    border: 1px solid #00bdd3;
+    border-radius: 50%;
+    margin-right: 12px;
+  }
 
+  &::after {
+    transition: all 0.3s ease 0s;
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #00bdd3;
+    border-radius: 50%;
+    left: 5px;
+    transform: scale(0);
+  }
+}
 
 //Css File Form
 
-.file{
-    margin-bottom: 54px;
-    &__item{
-        position: relative;
-        display: flex;
-    }
-    &__input{
-        position: absolute;
-        top:0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-    }
-    &__button{
-        font-family: 'Nunito';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 14px 15px;
-        border: 1px solid #000000DE;
-        border-radius: 4px 0px 0px 4px;
-    }
-    &__label{
-        border: 1px solid #D0CFCF;
-        border-radius: 4px;
-        padding: 16px 14px;
-        width: 100%;
-        &::placeholder{
-            font-family: 'Nunito';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-        }
-    }
-}
-
-
-.form-submit__button-submit{
+.file {
+  margin-bottom: 54px;
+  &__item {
+    position: relative;
     display: flex;
-    flex-direction: column;
+  }
+  &__input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+  &__button {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    padding: 14px 15px;
+    border: 1px solid #000000de;
+    border-radius: 4px 0px 0px 4px;
+  }
+  &__label {
+    border: 1px solid #d0cfcf;
+    border-radius: 4px;
+    padding: 16px 14px;
+    width: 100%;
+    &::placeholder {
+      font-family: 'Nunito';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+    }
+  }
 }
 
-.form-page .error{
-    border: 2px solid rgb(168, 15, 15);
+.form-submit__button-submit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.file__label__message{
-    position: absolute;
-    top:100%;
-    left: 90px;
+.form-page .error {
+  border: 2px solid rgb(168, 15, 15);
 }
 
-
-.form__register__true{
-    background: url(../../assets/success-imageSuccessFullyRegistere.png) 0/cover no-repeat;
-    height: 100%;
+.file__label__message {
+  position: absolute;
+  top: 100%;
+  left: 90px;
 }
 
-.input__server__error{
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 700;
+//  IF register true
+.form__register__true {
+  background: url(../../assets/success-imageSuccessFullyRegistere.png) 0 / cover
+    no-repeat;
+  height: 100%;
+}
+.form-page__text {
+  font-weight: 400;
+  font-family: 'Nunito';
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.input__server__error {
+  margin-bottom: 20px;
+  font-size: 26px;
+  font-weight: 700;
 }
