--- a/src/component/ui/Button/Button.scss
+++ b/src/component/ui/Button/Button.scss
@@ -6,6 +6,7 @@
   padding: 4px 22px;
   background-color: #f4e041;
   border-radius: 80px;
+  transition: all 0.5s ease 0s;
   &:disabled {
     background-color: #b4b4b4;
     color: rgba(255, 255, 255, 0.87);
